# Gittensor-TinyRouter

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  SUBMITTING.md  index.html  leaderboard.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
baselines/: README.md  always_model.py
benchmarks/: __init__.py
configs/: benchmarks.yaml  models.yaml  trinity.yaml
docs/: ARCHITECTURE.md  BENCHMARK_PROTOCOL.md  CI.md  COMPETITION_RULES.md  EVALUATION_PIPELINE.md  GLOSSARY.md  JOURNAL.md  ORACLE_CEILING_DIAGNOSTIC.md  REPRODUCTION_GUIDE.md  RESULTS.md
scripts/: ablations_report.py  adapter_conformance.py  audit_eval.py  baseline_efficiency_report.py  benchmark_protocol.py  build_benchmark.py  check_config.py  competition_timeline_report.py  contested_subset.py  convergence_report.py  coordinator_vs_llm_report.py  cost_report.py  dataset_quality_report.py  definition_of_done_report.py  efficiency_report.py  ensemble_report.py  explain_grade.py  format_audit_report.py  fugu_baseline_eval.py  fugu_cost_report.py  fugu_grpo_train.py  generalization_report.py  head_variants_report.py  leaderboard_targets.py  novelty_report.py  oracle_ceiling.py  pack_submission.py  pr_eval.py  preflight_composite.py  preflight_submission.py  prepare_launch.py  remote_env.sh  results_table.py  run_remote.sh  sampling_report.py  scorecard_report.py  setup_remote.sh  significance_report.py  termination_profile_report.py  train_cost_report.py  (+6 more)
tests/: test_ablations.py  test_adapter_conformance.py  test_agreement.py  test_aime_adapter.py  test_bbh_adapter.py  (+151 more)
(+125 files in other folders)
